--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -21,4 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 pluginVersion=0.1.0
-flipperUtilVersion=1.0.0
+flipperUtilVersion=0.1.0-SNAPSHOT
