--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        maven {
+            url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+        }
         mavenLocal()
     }
 
@@ -12,7 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.piex.plugin:flipperplugin:1.0.0"
+        classpath "io.github.tadevi:flipperplugin:0.1.2-SNAPSHOT"
     }
 }
 
@@ -22,7 +25,7 @@ allprojects {
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven {
-            url "https://maven.garenanow.com/nexus/content/groups/public/"
+            url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
         }
         mavenLocal()
     }
