--- a/plugin/flipper/src/main/AndroidManifest.xml
+++ b/plugin/flipper/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.piex.util.flipper">
+    package="io.github.tadevi.util.flipper">
 
     <application>
         <provider
-            android:name="com.piex.util.flipper.FlipperUtilProvider"
+            android:name="io.github.tadevi.util.flipper.FlipperUtilProvider"
             android:authorities="${applicationId}.FlipperUtilProvider" />
     </application>
 </manifest>
